--- a/home.html
+++ b/home.html
@@ -418,7 +418,8 @@
 
     <!-- this for sound -->
     <audio id="scanSound" preload="auto">
-        <source src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" type="audio/mpeg">
+        <source src="sound.mp3" type="audio/mpeg">
+        <source src="sound.ogg" type="audio/ogg">
     </audio>
 
     <footer>
