--- a/home.html
+++ b/home.html
@@ -905,7 +905,7 @@
         // Play scan sound
         function playScanSound() {
             // Reset audio to start and play
-            scanSound.currentTime = 0;
+            // scanSound.currentTime = 0;
             scanSound.play().catch(e => {
                 console.log('Audio play failed:', e);
             });
@@ -922,3 +922,4 @@
     </script>
 </body>
 </html>
+
