--- a/home.html
+++ b/home.html
@@ -465,7 +465,8 @@
 
     <!-- this for sound -->
     <audio id="scanSound" preload="auto">
-        <source src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" type="audio/mpeg">
+        <source src="sound.mp3" type="audio/mpeg">
+        <source src="sound.ogg" type="audio/ogg">
     </audio>
 
     <footer>
@@ -905,7 +906,6 @@
         // Play scan sound
         function playScanSound() {
             // Reset audio to start and play
-            // scanSound.currentTime = 0;
             scanSound.play().catch(e => {
                 console.log('Audio play failed:', e);
             });
@@ -922,4 +922,3 @@
     </script>
 </body>
 </html>
-
